[project]
name = "shiftclustering"
version = "0.2.0"
description = "ShiftClustering is a Python package for clustering data using the MeanShiftPP and GridShift algorithms."
readme = "README.md"
authors = [
    { name = "Shu Li", email = "zetarylee@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
benchmark = [
    "numba>=0.60",
    "scikit-learn>=1.7",
    "torch>=2.7.0",
]
test = [
    "pytest>=8.0",
]

[build-system]
requires = [
    "scikit-build-core>=0.11",
    "nanobind>=2.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"

cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux*"

[tool.cibuildwheel.macos]
environment = { HOMEBREW_NO_AUTO_UPDATE = "1" }

[tool.cibuildwheel.linux]
before-build = "yum install -y gcc-c++ || apt-get update && apt-get install -y g++"
